2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Initialize notyet ‘.branches’ correctly.

	Original circular-GIGO from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): For notyet ‘.branches’, use ‘NULL’ as head
	of the cdr-copying chain, not the to-be-initialized ‘.branches’!

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for building xorlf.

	* Makefile.am (clean-local): Don't delete ‘xorlf*’.
	(test-prep): Don't ‘$(MAKE) xorlf’ or move it to 0pre/bin.
	(xorlf): Delete target.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Fully initialize delta objects.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): If there is no "commitid"
	field, explicitly clear ‘d->commitid’.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Fully initialize notyet objects.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): If there are no more revision
	numbers to parse, explicitly clear ‘ny->next’.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Delete unused macro.

	* b-grok.c (NEWPAIR): Delete macro.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Save notyet objects in caller space.

	Memory incoherence introduced 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): Don't save notyet objects in
	‘g->tranquil’; instead, save in caller specified space.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid identifier ‘SHARED’ (Solaris 8 header conflict).

	* b-divvy.c: Do s/SHARED/PLEXUS/g; do s/shared/plexus/g.
	* b-divvy.h: Likewise.
	* b-feph.c: Likewise.
	* b-isr.c: Likewise.
	* ci.c: Likewise.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.
	Reported by Paul Eggert.
